# krump_vst

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.cursor/: config.json
Source/Core/: PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ReverbEffect.cpp  ReverbEffect.h
Source/GUI/: PluginEditor.cpp  PluginEditor.h
src/: EffectChain.cpp  EffectChain.h  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/effects/: DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  Effect.h  FilterEffect.cpp  FilterEffect.h  PitchEffect.cpp  PitchEffect.h  ReverbEffect.cpp  ReverbEffect.h  SaturationEffect.cpp  SaturationEffect.h
src/core/: MidiManager.cpp  MidiManager.h
src/gui/LookAndFeel/: KrumpLookAndFeel.cpp  KrumpLookAndFeel.h  SP404LookAndFeel.cpp  SP404LookAndFeel.h
src/gui/components/: DisplayLabel.cpp  DisplayLabel.h  EffectButton.cpp  EffectButton.h  EffectComponent.cpp  EffectComponent.h  MainComponent.cpp  MainComponent.h  PresetButton.cpp  PresetButton.h  RotaryKnob.cpp  RotaryKnob.h
src/presets/: PresetManager.cpp  PresetManager.h
src/specs/: project_spec.yaml
tests/: CMakeLists.txt  FilterEffectTest.cpp  PluginTests.cpp
